fixed firefox header area visibility

--- a/scss/core/_nightmode.scss
+++ b/scss/core/_nightmode.scss
@@ -10,7 +10,7 @@ html[lang^=nm] {
         background: #1a1a1a !important;
     }
     #sr-header-area {
-        background-color: #0C1722;
+        background-color: #0C1722 !important;
     }
     //markdown and its colors
     a {
